--- a/website/docs/modules/ROOT/partials/Publishing_Footer.adoc
+++ b/website/docs/modules/ROOT/partials/Publishing_Footer.adoc
@@ -26,7 +26,7 @@ object mymodule extends SonatypeCentralPublishModule {
 
 ==== publishAll
 
-The `mill.contrib.sonatypecentral/publishAll` method takes the following arguments:
+The `mill.scalalib/SonatypeCentralPublishModule/publishAll` method takes the following arguments:
 
 `username`: The username for calling the Sonatype Central publishing api. Defaults to the `SONATYPE_USERNAME` environment variable if unset. If neither the parameter nor the environment variable are set, an error will be thrown. +
 
@@ -112,28 +112,23 @@ gpg --keyserver  keyserver.ubuntu.com --recv-keys longIDHere
 === Publishing
 
 You can publish all eligible modules in your Mill project using 
-`mill.scalalib.sonatypecentral.SonatypeCentralPublishModule/publishAll`:
+`mill.scalalib.SonatypeCentralPublishModule/`:
 
 [source,console]
 ----
-> mill \
-mill.scalalib.sonatypecentral.SonatypeCentralPublishModule/publishAll \
---username myusername \
---password mypassword \
---gpgArgs --passphrase=$MILL_PGP_PASSPHRASE,--no-tty,--pinentry-mode,loopback,--batch,--yes,-a,-b \
---publishArtifacts __.publishArtifacts \
---readTimeout  36000 \
---awaitTimeout 36000 \
---connectTimeout 36000 \
---shouldRelease false \
---bundleName com.lihaoyi-requests:1.0.0
+> mill mill.scalalib.SonatypeCentralPublishModule/
 ----
 
-You can also specify individual modules you want to publish:
+You can also specify individual modules you want to publish in two ways:
 
 [source,console]
 ----
-> ./mill mymodule.publishSonatypeCentral
+> mill foo.publishSonatypeCentral
+----
+
+[source.console]
+----
+> mill mill.scalalib.SonatypeCentralPublishModule --publishArtifacts foo.publishArtifacts
 ----
 
 === Publishing Using Github Actions
@@ -144,45 +139,26 @@ To publish on Github Actions, you can use something like this:
 ```yaml
 # .github/workflows/publish-artifacts.yml
 name: Publish Artifacts
-
 on:
   push:
     tags:
-      - '**'  # Trigger on any tag
-  workflow_dispatch:  # Allow manual triggering
-
+      - '**'
+  workflow_dispatch:
 jobs:
   publish-artifacts:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
-
-      - name: Publish artifacts to Sonatype
-        run: |
-          mill \
-            mill.scalalib.sonatypecentral.SonatypeCentralPublishModule/publishAll \
-            --username $MILL_SONATYPE_USERNAME \
-            --password $MILL_SONATYPE_PASSWORD \
-            --gpgArgs --passphrase=$MILL_PGP_PASSPHRASE,--no-tty,--pinentry-mode,loopback,--batch,--yes,-a,-b \
-            --publishArtifacts __.publishArtifacts \
-            --readTimeout 36000 \
-            --awaitTimeout 36000 \
-            --connectTimeout 36000 \
-            --shouldRelease false \
-            --bundleName com.lihaoyi-requests:1.0.0
+      - run: ./mill mill.scalalib.SonatypeCentralPublishModule/
         env:
           MILL_PGP_PASSPHRASE: ${{ secrets.MILL_PGP_PASSPHRASE }}
           MILL_PGP_SECRET_BASE64: ${{ secrets.MILL_PGP_SECRET_BASE64 }}
-          MILL_SONATYPE_USERNAME: ${{ secrets.MILL_SONATYPE_USERNAME }}
           MILL_SONATYPE_PASSWORD: ${{ secrets.MILL_SONATYPE_PASSWORD }}
+          MILL_SONATYPE_USERNAME: ${{ secrets.MILL_SONATYPE_USERNAME }}
 ```
 
 Where `MILL_PGP_PASSPHRASE`, `MILL_PGP_SECRET_BASE64`, `MILL_SONATYPE_PASSWORD`, and
@@ -212,7 +188,7 @@ You can also specify individual modules you want to publish via a selector:
 
 [source,console]
 ----
-> ./mill foo.publishSonatypeCentral
+> mill mill.scalalib.PublishModule/ --publishArtifacts foo.publishArtifacts
 ----
 
 The default URL for publishing to sonatype's Maven Central is `oss.sonatype.org`.
