reintroduced sonatypecentral plugin doc

--- a/website/docs/modules/ROOT/nav.adoc
+++ b/website/docs/modules/ROOT/nav.adoc
@@ -95,6 +95,7 @@
 *** xref:contrib/proguard.adoc[]
 *** xref:contrib/scalapblib.adoc[]
 *** xref:contrib/scoverage.adoc[]
+*** xref:contrib/sonatypecentral.adoc[]
 *** xref:contrib/testng.adoc[]
 *** xref:contrib/twirllib.adoc[]
 *** xref:contrib/versionfile.adoc[]
